--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -19,9 +22,15 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
-            android:name=".CameraActivity"
-            android:parentActivityName=".MainActivity"
+            android:name=".ppl"
             android:exported="false" />
+        <activity
+            android:name=".twoppl"
+            android:exported="false" />
+        <activity
+            android:name=".CameraActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
