--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/confirm_btn" />
+
+        <activity
+            android:name=".PoseMajorityActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
