--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,20 +23,19 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.actions"
-            android:resource="@xml/confirm_btn" />
+            android:resource="@drawable/like_drawable" />
 
         <activity
             android:name=".PoseMajorityActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ppl"/>
         <activity
             android:name=".ppl2"
             android:exported="false" />
         <activity
             android:name=".ppl"
             android:exported="false" />
-        <activity
-            android:name=".twoppl"
-            android:exported="false" />
+
         <activity
             android:name=".CameraActivity"
             android:exported="false"
