--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
+            android:name=".ChooseRltshp"
+            android:exported="false" />
+        <activity
             android:name=".Family"
             android:exported="false" />
         <activity
@@ -36,9 +39,11 @@
             android:name=".PoseMajorityActivity"
             android:exported="false"
             android:parentActivityName=".ppl" />
+
         <activity
             android:name=".ppl2"
             android:exported="false" />
+
         <activity
             android:name=".ppl"
             android:exported="false" />
@@ -49,13 +54,14 @@
         <activity
             android:name=".IntroActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
