--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,13 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
+            android:name=".With_friend"
+            android:exported="false" />
+        <activity
             android:name=".ChooseRltshp"
+            android:exported="false" />
+        <activity
+            android:name=".ConceptActivity"
             android:exported="false" />
         <activity
             android:name=".Family"
@@ -39,11 +45,9 @@
             android:name=".PoseMajorityActivity"
             android:exported="false"
             android:parentActivityName=".ppl" />
-
         <activity
             android:name=".ppl2"
             android:exported="false" />
-
         <activity
             android:name=".ppl"
             android:exported="false" />
@@ -54,7 +58,6 @@
         <activity
             android:name=".IntroActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
