--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
+            android:name=".three_pose"
+            android:exported="false" />
+        <activity
             android:name=".ChooseRltshp"
             android:exported="false" />
         <activity
@@ -39,11 +42,9 @@
             android:name=".PoseMajorityActivity"
             android:exported="false"
             android:parentActivityName=".ppl" />
-
         <activity
             android:name=".ppl2"
             android:exported="false" />
-
         <activity
             android:name=".ppl"
             android:exported="false" />
@@ -54,7 +55,6 @@
         <activity
             android:name=".IntroActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
