--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
+            android:name=".NaviActivity"
+            android:exported="false" />
+        <activity
             android:name=".three_pose"
             android:exported="false" />
         <activity
