--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:theme="@style/Theme.GURU2"
         tools:targetApi="31">
         <activity
-            android:name=".NaviActivity"
+            android:name=".props"
             android:exported="false" />
         <activity
             android:name=".three_pose"
@@ -34,6 +34,12 @@
             android:name=".Family"
             android:exported="false" />
         <activity
+            android:name=".With_friend"
+            android:exported="false" />
+        <activity
+            android:name=".with_couple"
+            android:exported="false" />
+        <activity
             android:name=".pplm"
             android:exported="false" />
 
@@ -41,10 +47,6 @@
             android:name="com.google.android.actions"
             android:resource="@xml/confirm_btn" />
 
-        <activity
-            android:name=".PoseMajorityActivity"
-            android:exported="false"
-            android:parentActivityName=".ppl" />
         <activity
             android:name=".ppl2"
             android:exported="false" />
